Fix asterisk emblem spacing

--- a/webtool/static/css/components/analysis-tree.css
+++ b/webtool/static/css/components/analysis-tree.css
@@ -400,8 +400,8 @@ aside.run-child-processor button:hover {
 }
 
 .run-processor-button.inline {
-    width: calc(var(--font-body) * 1.5);
-    height: calc(var(--font-body) * 1.5);
+    width: calc(var(--font-body) * 1.45);
+    height: calc(var(--font-body) * 1.45);
     line-height: calc(var(--font-body) * 1.5);
 }
 
